// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DualListBox2 component testing DualListBox2 1`] = `
<DocumentFragment>
  <div
    aria-label="デュアルリストボックス"
    class="sc-kThouk cMDFAk"
    role="region"
  >
    <ul
      aria-label="リストの表示切り替え"
      class="sc-dTdQuR dJxckz"
      role="tablist"
    >
      <li>
        <button
          aria-controls="list-items-panel"
          aria-expanded="true"
          aria-selected="true"
          role="tab"
          type="button"
        >
          リストアイテム
        </button>
      </li>
      <li>
        <button
          aria-controls="selected-items-panel"
          aria-expanded="false"
          aria-selected="false"
          role="tab"
          type="button"
        >
          選択済みアイテム
          <span
            class="sc-llIIlC jTqoYC"
          >
            2
          </span>
        </button>
      </li>
    </ul>
    <div
      class="sc-elFkmj eKfUxh"
    >
      <div
        aria-labelledby="list-items-tab"
        class="sc-kieALA esBKrG"
        id="list-items-panel"
        role="tabpanel"
      >
        <div
          class="sc-kAFUCS OWcgf"
        >
          <div
            class="sc-dACwDz iWoeBy"
          >
            <span
              class="sc-dYOLZc hLKLGI"
              size="12"
            >
              <svg
                viewBox="0 0 18 18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h18v18H0z"
                  fill="none"
                />
                <path
                  d="M14.023,12.963l3.212,3.211-1.061,1.061-3.211-3.212a6.751,6.751,0,1,1,1.061-1.06Zm-1.5-.556a5.248,5.248,0,1,0-.112.112l.112-.112Z"
                  fill="#778490"
                  transform="translate(-0.5 -0.5)"
                />
              </svg>
            </span>
            <input
              aria-label="アイテムを検索"
              placeholder="検索"
              type="text"
              value=""
            />
          </div>
          <button
            aria-expanded="false"
            aria-haspopup="dialog"
            class="sc-dHKmnV cWmNBR"
            type="button"
          >
            <span
              class="sc-dYOLZc iqnkiY"
              size="18"
            >
              <svg
                viewBox="0 0 18 18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h18v18H0z"
                  fill="none"
                />
                <path
                  d="M11.5,3A1.5,1.5,0,1,0,13,4.5,1.5,1.5,0,0,0,11.5,3Zm0,10.5A1.5,1.5,0,1,0,13,15,1.5,1.5,0,0,0,11.5,13.5Zm0-5.25A1.5,1.5,0,1,0,13,9.75,1.5,1.5,0,0,0,11.5,8.25Z"
                  fill="#041C33"
                  transform="translate(-2.5 -0.75)"
                />
              </svg>
            </span>
          </button>
          <div
            class="sc-frmfij hZGpVV"
          >
            4件
          </div>
          <ul
            class="sc-groBii jijbvp"
          >
            <li>
              <button
                type="button"
              >
                <span
                  class="sc-dYOLZc iqnkiY"
                  size="18"
                >
                  <svg
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M9.99999 15.172L19.192 5.979L20.607 7.393L9.99999 18L3.63599 11.636L5.04999 10.222L9.99999 15.172Z"
                      fill="#0B82F4"
                    />
                  </svg>
                </span>
                全て追加
              </button>
            </li>
            <li>
              <button
                type="button"
              >
                <span
                  class="sc-dYOLZc iqnkiY"
                  size="18"
                >
                  <svg
                    viewBox="0 0 18 18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0,0H18V18H0Z"
                      fill="none"
                    />
                    <path
                      d="M6523,4625a7,7,0,1,1,7,7A7.008,7.008,0,0,1,6523,4625Zm7,5.6a5.6,5.6,0,0,0,4.422-9.033l-7.854,7.854A5.573,5.573,0,0,0,6530,4630.6Zm-5.6-5.6a5.572,5.572,0,0,0,1.178,3.433l7.854-7.855A5.6,5.6,0,0,0,6524.4,4625Z"
                      fill="#EB0A4E"
                      transform="translate(-6521.011 -4616.011)"
                    />
                  </svg>
                </span>
                全て除外
              </button>
            </li>
          </ul>
        </div>
        <div
          class="sc-dibcMh bsEjG"
        >
          <div
            class="sc-cTIdZS kmLjCn"
          >
            リストアイテム1
            <div
              class="sc-gfUXbm jVBqp"
            >
              <li>
                <button
                  aria-label="追加"
                  aria-pressed="false"
                  style="--color: #0B82F4;"
                  type="button"
                >
                  <span
                    class="sc-dYOLZc iqnkiY"
                    size="18"
                  >
                    <svg
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M9.99999 15.172L19.192 5.979L20.607 7.393L9.99999 18L3.63599 11.636L5.04999 10.222L9.99999 15.172Z"
                        fill="#041C33"
                      />
                    </svg>
                  </span>
                </button>
              </li>
              <li>
                <button
                  aria-label="除外"
                  aria-pressed="false"
                  style="--color: #EB0A4E;"
                  type="button"
                >
                  <span
                    class="sc-dYOLZc iqnkiY"
                    size="18"
                  >
                    <svg
                      viewBox="0 0 18 18"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M0,0H18V18H0Z"
                        fill="none"
                      />
                      <path
                        d="M6523,4625a7,7,0,1,1,7,7A7.008,7.008,0,0,1,6523,4625Zm7,5.6a5.6,5.6,0,0,0,4.422-9.033l-7.854,7.854A5.573,5.573,0,0,0,6530,4630.6Zm-5.6-5.6a5.572,5.572,0,0,0,1.178,3.433l7.854-7.855A5.6,5.6,0,0,0,6524.4,4625Z"
                        fill="#041C33"
                        transform="translate(-6521.011 -4616.011)"
                      />
                    </svg>
                  </span>
                </button>
              </li>
            </div>
          </div>
          <div
            class="sc-cTIdZS kmLjCn"
          >
            リストアイテム2
            <div
              class="sc-gfUXbm jVBqp"
            >
              <li>
                <button
                  aria-label="追加"
                  aria-pressed="false"
                  style="--color: #0B82F4;"
                  type="button"
                >
                  <span
                    class="sc-dYOLZc iqnkiY"
                    size="18"
                  >
                    <svg
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M9.99999 15.172L19.192 5.979L20.607 7.393L9.99999 18L3.63599 11.636L5.04999 10.222L9.99999 15.172Z"
                        fill="#041C33"
                      />
                    </svg>
                  </span>
                </button>
              </li>
              <li>
                <button
                  aria-label="除外"
                  aria-pressed="false"
                  style="--color: #EB0A4E;"
                  type="button"
                >
                  <span
                    class="sc-dYOLZc iqnkiY"
                    size="18"
                  >
                    <svg
                      viewBox="0 0 18 18"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M0,0H18V18H0Z"
                        fill="none"
                      />
                      <path
                        d="M6523,4625a7,7,0,1,1,7,7A7.008,7.008,0,0,1,6523,4625Zm7,5.6a5.6,5.6,0,0,0,4.422-9.033l-7.854,7.854A5.573,5.573,0,0,0,6530,4630.6Zm-5.6-5.6a5.572,5.572,0,0,0,1.178,3.433l7.854-7.855A5.6,5.6,0,0,0,6524.4,4625Z"
                        fill="#041C33"
                        transform="translate(-6521.011 -4616.011)"
                      />
                    </svg>
                  </span>
                </button>
              </li>
            </div>
          </div>
          <div
            class="sc-cTIdZS kmLjCn"
          >
            リストアイテム3
            <div
              class="sc-gfUXbm jVBqp"
            >
              <li>
                <button
                  aria-label="追加"
                  aria-pressed="false"
                  style="--color: #0B82F4;"
                  type="button"
                >
                  <span
                    class="sc-dYOLZc iqnkiY"
                    size="18"
                  >
                    <svg
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M9.99999 15.172L19.192 5.979L20.607 7.393L9.99999 18L3.63599 11.636L5.04999 10.222L9.99999 15.172Z"
                        fill="#041C33"
                      />
                    </svg>
                  </span>
                </button>
              </li>
              <li>
                <button
                  aria-label="除外"
                  aria-pressed="false"
                  style="--color: #EB0A4E;"
                  type="button"
                >
                  <span
                    class="sc-dYOLZc iqnkiY"
                    size="18"
                  >
                    <svg
                      viewBox="0 0 18 18"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M0,0H18V18H0Z"
                        fill="none"
                      />
                      <path
                        d="M6523,4625a7,7,0,1,1,7,7A7.008,7.008,0,0,1,6523,4625Zm7,5.6a5.6,5.6,0,0,0,4.422-9.033l-7.854,7.854A5.573,5.573,0,0,0,6530,4630.6Zm-5.6-5.6a5.572,5.572,0,0,0,1.178,3.433l7.854-7.855A5.6,5.6,0,0,0,6524.4,4625Z"
                        fill="#041C33"
                        transform="translate(-6521.011 -4616.011)"
                      />
                    </svg>
                  </span>
                </button>
              </li>
            </div>
          </div>
          <div
            class="sc-cTIdZS kmLjCn"
          >
            長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い名前のリストアイテム
            <div
              class="sc-gfUXbm jVBqp"
            >
              <li>
                <button
                  aria-label="追加"
                  aria-pressed="false"
                  style="--color: #0B82F4;"
                  type="button"
                >
                  <span
                    class="sc-dYOLZc iqnkiY"
                    size="18"
                  >
                    <svg
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M9.99999 15.172L19.192 5.979L20.607 7.393L9.99999 18L3.63599 11.636L5.04999 10.222L9.99999 15.172Z"
                        fill="#041C33"
                      />
                    </svg>
                  </span>
                </button>
              </li>
              <li>
                <button
                  aria-label="除外"
                  aria-pressed="false"
                  style="--color: #EB0A4E;"
                  type="button"
                >
                  <span
                    class="sc-dYOLZc iqnkiY"
                    size="18"
                  >
                    <svg
                      viewBox="0 0 18 18"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M0,0H18V18H0Z"
                        fill="none"
                      />
                      <path
                        d="M6523,4625a7,7,0,1,1,7,7A7.008,7.008,0,0,1,6523,4625Zm7,5.6a5.6,5.6,0,0,0,4.422-9.033l-7.854,7.854A5.573,5.573,0,0,0,6530,4630.6Zm-5.6-5.6a5.572,5.572,0,0,0,1.178,3.433l7.854-7.855A5.6,5.6,0,0,0,6524.4,4625Z"
                        fill="#041C33"
                        transform="translate(-6521.011 -4616.011)"
                      />
                    </svg>
                  </span>
                </button>
              </li>
            </div>
          </div>
          <div
            style="height: 20px;"
          />
        </div>
      </div>
      <div
        class="sc-kieALA OLlrZ"
      >
        <div
          class="sc-iLBnws jRfwKa"
        >
          <div
            class="sc-eGjrzz ehDNjh"
          >
            <div
              class="sc-fGlNzy iDvPNh"
            >
              <span
                class="sc-dYOLZc iqnkiY"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9.99999 15.172L19.192 5.979L20.607 7.393L9.99999 18L3.63599 11.636L5.04999 10.222L9.99999 15.172Z"
                    fill="#0B82F4"
                  />
                </svg>
              </span>
              1
            </div>
            <div
              class="sc-hawdNJ DYiQD"
            >
              <span
                class="sc-dYOLZc iqnkiY"
                size="18"
              >
                <svg
                  viewBox="0 0 18 18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0,0H18V18H0Z"
                    fill="none"
                  />
                  <path
                    d="M6523,4625a7,7,0,1,1,7,7A7.008,7.008,0,0,1,6523,4625Zm7,5.6a5.6,5.6,0,0,0,4.422-9.033l-7.854,7.854A5.573,5.573,0,0,0,6530,4630.6Zm-5.6-5.6a5.572,5.572,0,0,0,1.178,3.433l7.854-7.855A5.6,5.6,0,0,0,6524.4,4625Z"
                    fill="#EB0A4E"
                    transform="translate(-6521.011 -4616.011)"
                  />
                </svg>
              </span>
              1
            </div>
          </div>
          <div
            class="sc-iayzNI iUEdQQ"
          >
            <button
              active="[object Object]"
              borderradius="4px"
              class="sc-hKDTPf sc-fmZSGO dIkYig cFwitg"
              color="basicLight"
              font-size="12px"
              height="28px"
              hover="[object Object]"
              normal="[object Object]"
              paddinginline="6px"
              type="button"
            >
              選択をクリア
            </button>
          </div>
        </div>
        <div
          class="sc-dibcMh bsEjG"
        >
          <p
            class="sc-ffSBbn fYIQzL"
          >
            <span
              class="sc-dYOLZc iqnkiY"
              size="18"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9.99999 15.172L19.192 5.979L20.607 7.393L9.99999 18L3.63599 11.636L5.04999 10.222L9.99999 15.172Z"
                  fill="#0B82F4"
                />
              </svg>
            </span>
            追加
          </p>
          <div
            class="sc-kednwr fJPOci"
          >
            リストアイテム1
            <button
              aria-label="解除"
              type="button"
            />
          </div>
          <p
            class="sc-ffSBbn fYIQzL"
          >
            <span
              class="sc-dYOLZc iqnkiY"
              size="18"
            >
              <svg
                viewBox="0 0 18 18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0,0H18V18H0Z"
                  fill="none"
                />
                <path
                  d="M6523,4625a7,7,0,1,1,7,7A7.008,7.008,0,0,1,6523,4625Zm7,5.6a5.6,5.6,0,0,0,4.422-9.033l-7.854,7.854A5.573,5.573,0,0,0,6530,4630.6Zm-5.6-5.6a5.572,5.572,0,0,0,1.178,3.433l7.854-7.855A5.6,5.6,0,0,0,6524.4,4625Z"
                  fill="#EB0A4E"
                  transform="translate(-6521.011 -4616.011)"
                />
              </svg>
            </span>
            除外
          </p>
          <div
            class="sc-kednwr fJPOci"
          >
            長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い名前のリストアイテム
            <button
              aria-label="解除"
              type="button"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DualListBox2 component testing DualListBox2 Accordion 1`] = `
<DocumentFragment>
  <div
    aria-label="デュアルリストボックス"
    class="sc-kThouk cMDFAk"
    role="region"
  >
    <ul
      aria-label="リストの表示切り替え"
      class="sc-dTdQuR dJxckz"
      role="tablist"
    >
      <li>
        <button
          aria-controls="list-items-panel"
          aria-expanded="true"
          aria-selected="true"
          role="tab"
          type="button"
        >
          リストアイテム
        </button>
      </li>
      <li>
        <button
          aria-controls="selected-items-panel"
          aria-expanded="false"
          aria-selected="false"
          role="tab"
          type="button"
        >
          選択済みアイテム
          <span
            class="sc-llIIlC jTqoYC"
          >
            2
          </span>
        </button>
      </li>
    </ul>
    <div
      class="sc-elFkmj eKfUxh"
    >
      <div
        aria-labelledby="list-items-tab"
        class="sc-kieALA esBKrG"
        id="list-items-panel"
        role="tabpanel"
      >
        <div
          class="sc-kAFUCS hrQZxK"
        >
          <div
            class="sc-dACwDz iWoeBy"
          >
            <span
              class="sc-dYOLZc hLKLGI"
              size="12"
            >
              <svg
                viewBox="0 0 18 18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h18v18H0z"
                  fill="none"
                />
                <path
                  d="M14.023,12.963l3.212,3.211-1.061,1.061-3.211-3.212a6.751,6.751,0,1,1,1.061-1.06Zm-1.5-.556a5.248,5.248,0,1,0-.112.112l.112-.112Z"
                  fill="#778490"
                  transform="translate(-0.5 -0.5)"
                />
              </svg>
            </span>
            <input
              aria-label="アイテムを検索"
              placeholder="検索"
              type="text"
              value=""
            />
          </div>
          <div
            class="sc-frmfij hZGpVV"
          >
            4件
          </div>
          <ul
            class="sc-groBii jijbvp"
          >
            <li>
              <button
                type="button"
              >
                <span
                  class="sc-dYOLZc iqnkiY"
                  size="18"
                >
                  <svg
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M9.99999 15.172L19.192 5.979L20.607 7.393L9.99999 18L3.63599 11.636L5.04999 10.222L9.99999 15.172Z"
                      fill="#0B82F4"
                    />
                  </svg>
                </span>
                全て追加
              </button>
            </li>
            <li>
              <button
                type="button"
              >
                <span
                  class="sc-dYOLZc iqnkiY"
                  size="18"
                >
                  <svg
                    viewBox="0 0 18 18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0,0H18V18H0Z"
                      fill="none"
                    />
                    <path
                      d="M6523,4625a7,7,0,1,1,7,7A7.008,7.008,0,0,1,6523,4625Zm7,5.6a5.6,5.6,0,0,0,4.422-9.033l-7.854,7.854A5.573,5.573,0,0,0,6530,4630.6Zm-5.6-5.6a5.572,5.572,0,0,0,1.178,3.433l7.854-7.855A5.6,5.6,0,0,0,6524.4,4625Z"
                      fill="#EB0A4E"
                      transform="translate(-6521.011 -4616.011)"
                    />
                  </svg>
                </span>
                全て除外
              </button>
            </li>
          </ul>
        </div>
        <div
          class="sc-dibcMh bsEjG"
        >
          <div
            class="sc-VILhF hvjSnE"
          >
            <button
              aria-expanded="false"
              aria-label="アコーディオン1を開く"
              class="sc-ciFqri jyFqsq"
              type="button"
            >
              アコーディオン1
            </button>
            <ul
              class="sc-jtazNH iIHztI"
            >
              <li>
                <button
                  aria-label="追加"
                  type="button"
                >
                  <span
                    class="sc-dYOLZc iqnkiY"
                    size="18"
                  >
                    <svg
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M9.99999 15.172L19.192 5.979L20.607 7.393L9.99999 18L3.63599 11.636L5.04999 10.222L9.99999 15.172Z"
                        fill="#0B82F4"
                      />
                    </svg>
                  </span>
                </button>
              </li>
              <li>
                <button
                  aria-label="除外"
                  type="button"
                >
                  <span
                    class="sc-dYOLZc iqnkiY"
                    size="18"
                  >
                    <svg
                      viewBox="0 0 18 18"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M0,0H18V18H0Z"
                        fill="none"
                      />
                      <path
                        d="M6523,4625a7,7,0,1,1,7,7A7.008,7.008,0,0,1,6523,4625Zm7,5.6a5.6,5.6,0,0,0,4.422-9.033l-7.854,7.854A5.573,5.573,0,0,0,6530,4630.6Zm-5.6-5.6a5.572,5.572,0,0,0,1.178,3.433l7.854-7.855A5.6,5.6,0,0,0,6524.4,4625Z"
                        fill="#EB0A4E"
                        transform="translate(-6521.011 -4616.011)"
                      />
                    </svg>
                  </span>
                </button>
              </li>
            </ul>
            <div
              class="sc-epGxBs AXlrK"
            >
              <span
                class="sc-dYOLZc iqnkiY"
                size="18"
              >
                <svg
                  viewBox="0 0 20 20"
                >
                  <path
                    d="m10 10.9 4.1-4.1 1.2 1.1-5.3 5.3L4.7 8l1.2-1.1z"
                    fill="#041C33"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="sc-VILhF hvjSnE"
          >
            <button
              aria-expanded="false"
              aria-label="アコーディオン2を開く"
              class="sc-ciFqri jyFqsq"
              type="button"
            >
              アコーディオン2
            </button>
            <ul
              class="sc-jtazNH iIHztI"
            >
              <li>
                <button
                  aria-label="追加"
                  type="button"
                >
                  <span
                    class="sc-dYOLZc iqnkiY"
                    size="18"
                  >
                    <svg
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M9.99999 15.172L19.192 5.979L20.607 7.393L9.99999 18L3.63599 11.636L5.04999 10.222L9.99999 15.172Z"
                        fill="#0B82F4"
                      />
                    </svg>
                  </span>
                </button>
              </li>
              <li>
                <button
                  aria-label="除外"
                  type="button"
                >
                  <span
                    class="sc-dYOLZc iqnkiY"
                    size="18"
                  >
                    <svg
                      viewBox="0 0 18 18"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M0,0H18V18H0Z"
                        fill="none"
                      />
                      <path
                        d="M6523,4625a7,7,0,1,1,7,7A7.008,7.008,0,0,1,6523,4625Zm7,5.6a5.6,5.6,0,0,0,4.422-9.033l-7.854,7.854A5.573,5.573,0,0,0,6530,4630.6Zm-5.6-5.6a5.572,5.572,0,0,0,1.178,3.433l7.854-7.855A5.6,5.6,0,0,0,6524.4,4625Z"
                        fill="#EB0A4E"
                        transform="translate(-6521.011 -4616.011)"
                      />
                    </svg>
                  </span>
                </button>
              </li>
            </ul>
            <div
              class="sc-epGxBs AXlrK"
            >
              <span
                class="sc-dYOLZc iqnkiY"
                size="18"
              >
                <svg
                  viewBox="0 0 20 20"
                >
                  <path
                    d="m10 10.9 4.1-4.1 1.2 1.1-5.3 5.3L4.7 8l1.2-1.1z"
                    fill="#041C33"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            style="height: 20px;"
          />
        </div>
      </div>
      <div
        class="sc-kieALA OLlrZ"
      >
        <div
          class="sc-iLBnws jRfwKa"
        >
          <div
            class="sc-eGjrzz ehDNjh"
          >
            <div
              class="sc-fGlNzy iDvPNh"
            >
              <span
                class="sc-dYOLZc iqnkiY"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9.99999 15.172L19.192 5.979L20.607 7.393L9.99999 18L3.63599 11.636L5.04999 10.222L9.99999 15.172Z"
                    fill="#0B82F4"
                  />
                </svg>
              </span>
              1
            </div>
            <div
              class="sc-hawdNJ DYiQD"
            >
              <span
                class="sc-dYOLZc iqnkiY"
                size="18"
              >
                <svg
                  viewBox="0 0 18 18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0,0H18V18H0Z"
                    fill="none"
                  />
                  <path
                    d="M6523,4625a7,7,0,1,1,7,7A7.008,7.008,0,0,1,6523,4625Zm7,5.6a5.6,5.6,0,0,0,4.422-9.033l-7.854,7.854A5.573,5.573,0,0,0,6530,4630.6Zm-5.6-5.6a5.572,5.572,0,0,0,1.178,3.433l7.854-7.855A5.6,5.6,0,0,0,6524.4,4625Z"
                    fill="#EB0A4E"
                    transform="translate(-6521.011 -4616.011)"
                  />
                </svg>
              </span>
              1
            </div>
          </div>
          <div
            class="sc-iayzNI iUEdQQ"
          >
            <button
              active="[object Object]"
              borderradius="4px"
              class="sc-hKDTPf sc-fmZSGO dIkYig cFwitg"
              color="basicLight"
              font-size="12px"
              height="28px"
              hover="[object Object]"
              normal="[object Object]"
              paddinginline="6px"
              type="button"
            >
              選択をクリア
            </button>
          </div>
        </div>
        <div
          class="sc-dibcMh bsEjG"
        >
          <p
            class="sc-ffSBbn fYIQzL"
          >
            <span
              class="sc-dYOLZc iqnkiY"
              size="18"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9.99999 15.172L19.192 5.979L20.607 7.393L9.99999 18L3.63599 11.636L5.04999 10.222L9.99999 15.172Z"
                  fill="#0B82F4"
                />
              </svg>
            </span>
            追加
          </p>
          <div
            class="sc-faJlkc bXCrKo"
          >
            アコーディオン1
          </div>
          <div
            class="sc-kednwr fJPOci"
          >
            リストアイテム1
            <button
              aria-label="解除"
              type="button"
            />
          </div>
          <p
            class="sc-ffSBbn fYIQzL"
          >
            <span
              class="sc-dYOLZc iqnkiY"
              size="18"
            >
              <svg
                viewBox="0 0 18 18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0,0H18V18H0Z"
                  fill="none"
                />
                <path
                  d="M6523,4625a7,7,0,1,1,7,7A7.008,7.008,0,0,1,6523,4625Zm7,5.6a5.6,5.6,0,0,0,4.422-9.033l-7.854,7.854A5.573,5.573,0,0,0,6530,4630.6Zm-5.6-5.6a5.572,5.572,0,0,0,1.178,3.433l7.854-7.855A5.6,5.6,0,0,0,6524.4,4625Z"
                  fill="#EB0A4E"
                  transform="translate(-6521.011 -4616.011)"
                />
              </svg>
            </span>
            除外
          </p>
          <div
            class="sc-faJlkc bXCrKo"
          >
            アコーディオン2
          </div>
          <div
            class="sc-kednwr fJPOci"
          >
            長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い名前のリストアイテム
            <button
              aria-label="解除"
              type="button"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DualListBox2 component testing DualListBox2 Section 1`] = `
<DocumentFragment>
  <div
    aria-label="デュアルリストボックス"
    class="sc-kThouk cMDFAk"
    role="region"
  >
    <ul
      aria-label="リストの表示切り替え"
      class="sc-dTdQuR dJxckz"
      role="tablist"
    >
      <li>
        <button
          aria-controls="list-items-panel"
          aria-expanded="true"
          aria-selected="true"
          role="tab"
          type="button"
        >
          リストアイテム
        </button>
      </li>
      <li>
        <button
          aria-controls="selected-items-panel"
          aria-expanded="false"
          aria-selected="false"
          role="tab"
          type="button"
        >
          選択済みアイテム
          <span
            class="sc-llIIlC jTqoYC"
          >
            2
          </span>
        </button>
      </li>
    </ul>
    <div
      class="sc-elFkmj eKfUxh"
    >
      <div
        aria-labelledby="list-items-tab"
        class="sc-kieALA esBKrG"
        id="list-items-panel"
        role="tabpanel"
      >
        <div
          class="sc-kAFUCS hrQZxK"
        >
          <div
            class="sc-dACwDz iWoeBy"
          >
            <span
              class="sc-dYOLZc hLKLGI"
              size="12"
            >
              <svg
                viewBox="0 0 18 18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h18v18H0z"
                  fill="none"
                />
                <path
                  d="M14.023,12.963l3.212,3.211-1.061,1.061-3.211-3.212a6.751,6.751,0,1,1,1.061-1.06Zm-1.5-.556a5.248,5.248,0,1,0-.112.112l.112-.112Z"
                  fill="#778490"
                  transform="translate(-0.5 -0.5)"
                />
              </svg>
            </span>
            <input
              aria-label="アイテムを検索"
              disabled=""
              placeholder="検索"
              type="text"
              value=""
            />
          </div>
          <div
            class="sc-frmfij hZGpVV"
          >
            -件
          </div>
          <ul
            class="sc-groBii jijbvp"
          >
            <li>
              <button
                disabled=""
                type="button"
              >
                <span
                  class="sc-dYOLZc iqnkiY"
                  size="18"
                >
                  <svg
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M9.99999 15.172L19.192 5.979L20.607 7.393L9.99999 18L3.63599 11.636L5.04999 10.222L9.99999 15.172Z"
                      fill="#B3BAC1"
                    />
                  </svg>
                </span>
                全て追加
              </button>
            </li>
            <li>
              <button
                disabled=""
                type="button"
              >
                <span
                  class="sc-dYOLZc iqnkiY"
                  size="18"
                >
                  <svg
                    viewBox="0 0 18 18"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0,0H18V18H0Z"
                      fill="none"
                    />
                    <path
                      d="M6523,4625a7,7,0,1,1,7,7A7.008,7.008,0,0,1,6523,4625Zm7,5.6a5.6,5.6,0,0,0,4.422-9.033l-7.854,7.854A5.573,5.573,0,0,0,6530,4630.6Zm-5.6-5.6a5.572,5.572,0,0,0,1.178,3.433l7.854-7.855A5.6,5.6,0,0,0,6524.4,4625Z"
                      fill="#B3BAC1"
                      transform="translate(-6521.011 -4616.011)"
                    />
                  </svg>
                </span>
                全て除外
              </button>
            </li>
          </ul>
        </div>
        <div
          class="sc-dibcMh bsEjG"
        >
          <button
            aria-expanded="false"
            aria-label="セクション1を開く"
            class="sc-jSJJpv kqbppi"
            type="button"
          >
            <span
              class="sc-kFXyV sCmJo"
            >
              <span
                class="sc-dYOLZc iqnkiY"
                size="18"
              >
                <svg
                  viewBox="0 0 20 20"
                >
                  <path
                    d="m9.1 10 4.1 4.1-1.1 1.2L6.8 10 12 4.7l1.1 1.2z"
                    fill="#041C33"
                  />
                </svg>
              </span>
            </span>
            <div>
              セクション1
            </div>
            <span
              class="sc-cIozSW kCFwlR"
            >
              <span
                class="sc-dYOLZc iqnkiY"
                size="18"
              >
                <svg
                  viewBox="0 0 20 20"
                >
                  <path
                    d="M10.9 10 6.8 5.9l1.1-1.2 5.3 5.3L8 15.3l-1.1-1.2z"
                    fill="#041C33"
                  />
                </svg>
              </span>
            </span>
          </button>
          <button
            aria-expanded="false"
            aria-label="セクション2を開く"
            class="sc-jSJJpv kqbppi"
            type="button"
          >
            <span
              class="sc-kFXyV sCmJo"
            >
              <span
                class="sc-dYOLZc iqnkiY"
                size="18"
              >
                <svg
                  viewBox="0 0 20 20"
                >
                  <path
                    d="m9.1 10 4.1 4.1-1.1 1.2L6.8 10 12 4.7l1.1 1.2z"
                    fill="#041C33"
                  />
                </svg>
              </span>
            </span>
            <div>
              セクション2
            </div>
            <span
              class="sc-cIozSW kCFwlR"
            >
              <span
                class="sc-dYOLZc iqnkiY"
                size="18"
              >
                <svg
                  viewBox="0 0 20 20"
                >
                  <path
                    d="M10.9 10 6.8 5.9l1.1-1.2 5.3 5.3L8 15.3l-1.1-1.2z"
                    fill="#041C33"
                  />
                </svg>
              </span>
            </span>
          </button>
          <div
            style="height: 20px;"
          />
        </div>
      </div>
      <div
        class="sc-kieALA OLlrZ"
      >
        <div
          class="sc-iLBnws jRfwKa"
        >
          <div
            class="sc-eGjrzz ehDNjh"
          >
            <div
              class="sc-fGlNzy iDvPNh"
            >
              <span
                class="sc-dYOLZc iqnkiY"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M9.99999 15.172L19.192 5.979L20.607 7.393L9.99999 18L3.63599 11.636L5.04999 10.222L9.99999 15.172Z"
                    fill="#0B82F4"
                  />
                </svg>
              </span>
              1
            </div>
            <div
              class="sc-hawdNJ DYiQD"
            >
              <span
                class="sc-dYOLZc iqnkiY"
                size="18"
              >
                <svg
                  viewBox="0 0 18 18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0,0H18V18H0Z"
                    fill="none"
                  />
                  <path
                    d="M6523,4625a7,7,0,1,1,7,7A7.008,7.008,0,0,1,6523,4625Zm7,5.6a5.6,5.6,0,0,0,4.422-9.033l-7.854,7.854A5.573,5.573,0,0,0,6530,4630.6Zm-5.6-5.6a5.572,5.572,0,0,0,1.178,3.433l7.854-7.855A5.6,5.6,0,0,0,6524.4,4625Z"
                    fill="#EB0A4E"
                    transform="translate(-6521.011 -4616.011)"
                  />
                </svg>
              </span>
              1
            </div>
          </div>
          <div
            class="sc-iayzNI iUEdQQ"
          >
            <button
              active="[object Object]"
              borderradius="4px"
              class="sc-hKDTPf sc-fmZSGO dIkYig cFwitg"
              color="basicLight"
              font-size="12px"
              height="28px"
              hover="[object Object]"
              normal="[object Object]"
              paddinginline="6px"
              type="button"
            >
              選択をクリア
            </button>
          </div>
        </div>
        <div
          class="sc-dibcMh bsEjG"
        >
          <p
            class="sc-ffSBbn fYIQzL"
          >
            <span
              class="sc-dYOLZc iqnkiY"
              size="18"
            >
              <svg
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M9.99999 15.172L19.192 5.979L20.607 7.393L9.99999 18L3.63599 11.636L5.04999 10.222L9.99999 15.172Z"
                  fill="#0B82F4"
                />
              </svg>
            </span>
            追加
          </p>
          <div
            class="sc-faJlkc bXCrKo"
          >
            セクション1
          </div>
          <div
            class="sc-kednwr fJPOci"
          >
            リストアイテム1
            <button
              aria-label="解除"
              type="button"
            />
          </div>
          <p
            class="sc-ffSBbn fYIQzL"
          >
            <span
              class="sc-dYOLZc iqnkiY"
              size="18"
            >
              <svg
                viewBox="0 0 18 18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0,0H18V18H0Z"
                  fill="none"
                />
                <path
                  d="M6523,4625a7,7,0,1,1,7,7A7.008,7.008,0,0,1,6523,4625Zm7,5.6a5.6,5.6,0,0,0,4.422-9.033l-7.854,7.854A5.573,5.573,0,0,0,6530,4630.6Zm-5.6-5.6a5.572,5.572,0,0,0,1.178,3.433l7.854-7.855A5.6,5.6,0,0,0,6524.4,4625Z"
                  fill="#EB0A4E"
                  transform="translate(-6521.011 -4616.011)"
                />
              </svg>
            </span>
            除外
          </p>
          <div
            class="sc-faJlkc bXCrKo"
          >
            セクション2
          </div>
          <div
            class="sc-kednwr fJPOci"
          >
            長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い長い名前のリストアイテム
            <button
              aria-label="解除"
              type="button"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
